Switched how bytes are read to improve compatibility.